--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,30 +1,30 @@
 {
-  "name": "vue in Content Scripts",
+  "name": "MV3-VUE-CHROME-EXTENSION-TEMPLATE",
   "version": "1.1",
   "manifest_version": 3,
   "action": {
-      "default_icon": {
-          "16": "assets/icon16.png",
-          "48": "assets/icon48.png",
-          "128": "assets/icon128.png"
-      },
-      "default_title": "Vue Popup",
-      "default_popup": "popup/index.html"
-  },
-  "icons": {
+    "default_icon": {
       "16": "assets/icon16.png",
       "48": "assets/icon48.png",
       "128": "assets/icon128.png"
+    },
+    "default_title": "Vue Popup",
+    "default_popup": "popup/index.html"
+  },
+  "icons": {
+    "16": "assets/icon16.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
   },
   "background": {
-      "service_worker": "background.ts"
+    "service_worker": "background.ts"
   },
   "content_scripts": [
-      {
-          "matches": ["https://github.com/*"],
-          "run_at": "document_end",
-          "js": ["content-scripts/main.ts"]
-      }
+    {
+      "matches": ["https://github.com/*"],
+      "run_at": "document_end",
+      "js": ["content-scripts/main.ts"]
+    }
   ],
   "permissions": [
     "identity"
