--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
+    "pinia": "^2.0.14",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-import-css": "^3.0.3",
