--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,7 @@
       "48": "assets/icon48.png",
       "128": "assets/icon128.png"
     },
-    "default_title": "Vue Popup",
+    "default_title": "Popup Sample",
     "default_popup": "popup/index.html"
   },
   "icons": {
@@ -26,7 +26,13 @@
       "js": ["content-scripts/main.ts"]
     }
   ],
+   "web_accessible_resources": [
+    {
+      "resources": [ "assets/*.png" ],
+      "matches": [ "https://github.com/*" ]
+    }
+  ],
   "permissions": [
-    "identity"
+    "identity", "storage", "tabs"
   ]
 }
