--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,7 +22,7 @@
   "content_scripts": [
     {
       "matches": ["https://github.com/*"],
-      "run_at": "document_end",
+      "run_at": "document_start",
       "js": ["content-scripts/main.ts"]
     }
   ],
