--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sample-project",
+  "name": "jira-cloud-versioner",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -28,6 +28,7 @@
     "esno": "^0.12.1",
     "firebase": "^9.5.0",
     "fs-extra": "^10.0.0",
+    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "pinia": "^2.0.28",
     "rimraf": "^3.0.2",
@@ -39,6 +40,7 @@
     "rollup-plugin-typescript2": "^0.31.0",
     "rollup-plugin-vue": "^6.0.0",
     "rollup-plugin-zip": "^1.0.1",
+    "sass-loader": "^13.2.0",
     "typescript": "^4.4.3"
   }
 }
