--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rollup-plugin-vue": "^6.0.0",
     "rollup-plugin-zip": "^1.0.1",
     "sass-loader": "^13.2.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "vuedraggable": "^4.1.0"
   }
 }
